2010-04-14  Jeff Schiller  <codedread@gmail.com>

Reviewed by Dirk Schulze.

        Update path parser test for Bug 37413: https://bugs.webkit.org/show_bug.cgi?id=37413
        now that all path segments render up until the first error

        * platform/mac/svg/custom/path-bad-data-expected.txt: updated path segments that render
        * svg/custom/path-bad-data.svg: updated test to ensure reference image is the same
        * svg/dom/fuzz-path-parser-expected.txt: updated path segments that render
        * svg/dom/path-parser-expected.txt: updated path segments that render
        * svg/dom/script-tests/path-parser.js: changed expected results for path segments that render
        ():
2010-04-14  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Dirk Schulze.

        Render SVG Paths up to first error, bug 37413: https://bugs.webkit.org/show_bug.cgi?id=37413

        * svg/SVGParserUtilities.cpp:
        (WebCore::SVGPathSegListBuilder::build):

Canonical link: https://commits.webkit.org/48879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57591 268f45cc-cd09-0410-ab3c-d52691b4dbfc